--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
   <div id="app"></div>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW9Xn599Pgrkgz-VWyYfxg7seRiI01mW0"></script>
-  <script src="assets/bundle.js"></script>
+  <script src="/public/bundle.js"></script>
 </body>
 </html>
