Add link to download app and change logo to svg

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
           <i class="icon-github"></i>
         </a>
       </div>
+      <div class="social-item">
+        <a href="https://play.google.com/store/apps/details?id=br.com.nossolixo.nossolixo&hl=pt" class="social-link" title="Baixe nosso aplicativo para Android">
+          <i class="icon-play-store"></i>
+        </a>
+      </div>
     </div>
   </div>
 
