--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Nosso Lixo</title>
-  <meta name="description" content="Encontre pontos de coleta de lixo reciclável próximo a você">
+  <meta name="description" content="Encontre pontos de coleta de lixo reciclável próximos a você">
   <meta name="keywords" content="lixo,reciclagem,coleta,óleo de cozinha,eletrônico,descarte,pilha,bateria,reciclável,plástico,metal,longa vida,papel,papelão,garrafa pet,vidro,meio ambiente,ong,sustentabilidade,nosso lixo">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:title" content="Nosso Lixo" />
   <meta property="og:site_name" content="Nosso Lixo" />
-  <meta property="og:description" content="Encontre pontos de coleta de lixo reciclável próximo a você" />
+  <meta property="og:description" content="Encontre pontos de coleta de lixo reciclável próximos a você" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.nossolixo.com.br" />
   <meta property="og:image" content="http://www.nossolixo.com.br/public/images/facebook.png" />
