--- a/public/new.html
+++ b/public/new.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nosso Lixo - Novo Ponto de Coleta</title>
+
   <style>
-    body, html { margin: 0; padding: 0; height: 100%; }
+    body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+    iframe { position: absolute; left:0; right:0; bottom:0; top:0; border:0; }
   </style>
 </head>
 <body>
-  <div class="typeform-widget" data-url="https://thiagogsr.typeform.com/to/ySX1Jt" style="width: 100%; height: 100%;"></div>
-
-  <script>(function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()</script>
+  <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://thiagogsr.typeform.com/to/ySX1Jt"></iframe>
+  <script type="text/javascript" src="https://embed.typeform.com/embed.js"></script>
 </body>
 </html>
